<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foodies</string>
    <string name="app_name1">FOODIES</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_virtual_waitress">VirtualWaitress</string>
    <string name="title_activity_finalize_order">finalize_order</string>
    <string name="title_activity_thankyou">thankyou</string>
    <string name="desserts">Desserts</string>
    <string name="chocolate_ice_cream_80">Chocolate Ice cream(₹80)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dash">__</string>
    <string name="vannila_ice_cream_70">Vannila Ice cream (₹70)</string>
    <string name="strawberry_ice_cream_75">Strawberry Ice cream(₹75)</string>
    <string name="falooda_150">Falooda (₹150)</string>
    <string name="brownie_fudge_120">Brownie Fudge(₹120)</string>
    <string name="alpine_chocoloate_150">Alpine Chocoloate(₹150)</string>
    <string name="devil_s_delite_100">Devil\'s Delite(₹100)</string>
    <string name="black_forest_80">Black Forest(₹80)</string>
    <string name="chocolate_lava_180">Chocolate Lava(₹180)</string>
    <string name="dutch_almond_120">Dutch almond(₹120)</string>
    <string name="main_menu">Main Menu</string>
    <string name="proceed">Proceed</string>
    <string name="order">order</string>
    <string name="your_order_is">Your order is :</string>
    <string name="Ddash">--</string>
    <string name="personal_preferances">Personal Preferances:</string>
    <string name="please_click_send_order_if_you_want_to_confirm_the_following_order">Please click Send Order if you want to confirm the following order</string>
    <string name="please_press_send_order_if_you_want_to_alter_your_order_press_main_menu">Please press Send order , If you want to alter your order press main menu</string>
    <string name="send_order">send order</string>
    <string name="non_veg_items">Non Veg Items</string>
    <string name="mutton_biryani_200">Mutton Biryani(₹200)</string>
    <string name="chicken_biryani_180">Chicken Biryani(₹180)</string>
    <string name="chicken_lollipop_100">Chicken Lollipop(₹100)</string>
    <string name="chicken_fried_rice_120">Chicken fried Rice(₹120)</string>
    <string name="chicken_noodles_120">Chicken Noodles(₹120)</string>
    <string name="kolhapuri_chicken_120">Kolhapuri chicken(₹120)</string>
    <string name="fried_fish_rice_250">Fried Fish Rice(₹250)</string>
    <string name="chicken_tikka_300">Chicken Tikka(₹300)</string>
    <string name="chicken_bbq_pizza_200">Chicken BBQ Pizza (₹200)</string>
    <string name="chicken_burger_120">Chicken Burger (₹120)</string>
    <string name="starters">starters</string>
    <string name="dessert">dessert</string>
    <string name="non_veg">non-veg</string>
    <string name="veg">veg</string>
    <string name="please_enter_your_table_number">Please enter your table number :)</string>
    <string name="chicken_chilly_120">Chicken Chilly(₹120)</string>
    <string name="paneer_pakoda_140">Paneer Pakoda(₹140)</string>
    <string name="cheese_pakoda_130">Cheese Pakoda(₹130)</string>
    <string name="tomato_soup_100">Tomato Soup(₹100)</string>
    <string name="chicken_soup_80">Chicken Soup(₹80)</string>
    <string name="veg_soup_80">Veg Soup(₹80)</string>
    <string name="masala_papad_30">Masala Papad(₹30)</string>
    <string name="paneer_chilly_120">Paneer Chilly(₹120)</string>
    <string name="chicken_crispy_170">Chicken Crispy (₹170)</string>
    <string name="veg_crispy_150">Veg Crispy(₹150)</string>
    <string name="menu">Menu</string>
    <string name="if_you_want_to_order_anything_else_click_menu">If you want to order anything else click menu</string>
    <string name="thank_you_your_order_will_be_served_soon">THANK YOU , Your order will be served soon :)</string>
    <string name="veg_items">Veg Items</string>
    <string name="roti_20">Roti (₹20)</string>
    <string name="paneer_kofta_150">Paneer Kofta(₹150)</string>
    <string name="veg_biryani_150">Veg Biryani(₹150)</string>
    <string name="veg_burger_40">Veg Burger (₹40)</string>
    <string name="veg_fried_rice_120">Veg fried Rice(₹120)</string>
    <string name="veg_noodles_100">Veg Noodles(₹100)</string>
    <string name="mutter_paneer_200">Mutter Paneer(₹200)</string>
    <string name="veg_pulao_200">Veg Pulao(₹200)</string>
    <string name="paneer_tikka_180">Paneer Tikka(₹180)</string>
    <string name="butter_roti_25">Butter Roti(₹25)</string>

</resources>
