<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="finalize_order"
    android:background="@drawable/thanku2"
    >


    <TextView
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textColor="#000000"
        android:id="@+id/order_final"
        android:textSize="12sp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/tv" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order_is"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginTop="110dp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/order_final" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:id="@+id/tot_p"
        android:text="@string/Ddash"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_below="@+id/order_final"
        android:layout_alignStart="@+id/order_final" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_preferances"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="12sp"
        android:layout_marginBottom="44dp"
        android:id="@+id/textView11"
        android:layout_above="@+id/button4"
        android:layout_toStartOf="@+id/personalp" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="12sp"
        android:id="@+id/personalp"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignEnd="@+id/tv"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:id="@+id/tv"
        android:textSize="12sp"
        android:text="@string/please_click_send_order_if_you_want_to_confirm_the_following_order"
        android:textColor="#000000"
        android:padding="4dp"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="270sp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/please_press_send_order_if_you_want_to_alter_your_order_press_main_menu"
        android:textSize="12sp"
        android:id="@+id/textView6"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button4"
        android:layout_marginBottom="66dp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/main_menu"
        android:background="#ffbc7a"
        android:onClick="main_menu"
        android:id="@+id/button4"
        android:layout_above="@+id/textView6"
        android:layout_alignStart="@+id/tv" />
    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/send_order"
        android:background="#ffbc7a"
        android:onClick="send_ord"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_alignEnd="@+id/order_final" />
</RelativeLayout>
