<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_table"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thankyou">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_your_order_will_be_served_soon"
        android:textColor="#000000"
        android:layout_marginTop="103dp"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/if_you_want_to_order_anything_else_click_menu"
        android:layout_above="@+id/button11"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginBottom="49dp" />

    <Button
        android:onClick="main_menu"
        android:text="@string/menu"
        android:background="#ffbc7a"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:id="@+id/button11"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="111dp" />

</RelativeLayout>
