<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="Order_Type"
    android:background="@drawable/register_table"
    >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:background="@drawable/menu"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton"
        android:background="@drawable/vegs"
        android:onClick="starter"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/imageButton3"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:id="@+id/imageButton2"
        android:background="@drawable/non_veg"
        android:onClick="nveg"
        android:layout_below="@+id/imageView"
        android:layout_toStartOf="@+id/imageButton"
        android:layout_marginTop="200dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:id="@+id/imageButton3"
        android:background="@drawable/vegvectrr"
        android:onClick="veg"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_toEndOf="@+id/button6"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton4"
        android:background="@drawable/dessert_l"
        android:onClick="dessert"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/button6"
        android:layout_marginTop="44dp"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/total_on_mm"
        android:layout_alignBottom="@+id/button6"
        android:layout_toEndOf="@+id/imageButton" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/starters"
    android:textColor="@android:color/black"
    android:textSize="12sp"
    android:layout_alignBottom="@+id/imageButton"
    android:layout_alignStart="@+id/textView7" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/proceed"
        android:background="#ffbc7a"
        android:onClick="fin_ord"
        android:id="@+id/button6"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/imageButton2"
        android:layout_marginBottom="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dessert"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:id="@+id/textView7"
        android:layout_below="@+id/imageButton4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_veg"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:id="@+id/textView8"
        android:layout_below="@+id/imageButton2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veg"
        android:textColor="@android:color/black"
        android:textSize="12sp"

        android:id="@+id/textView10"
        android:layout_alignTop="@+id/textView8"
        android:layout_toEndOf="@+id/imageButton4"
        android:layout_marginStart="27dp" />


</RelativeLayout>
